# wh_fsu

./: CMakeLists.txt  config.h.in  cross.cmake  fsu.db  动环监控主机程序说明.md
lib/libmodbus/lib/: libmodbus.la  libmodbus.so.5.1.0
lib/sqlite3/lib/: libsqlite3.la  libsqlite3.so.0.8.6
soap_sc/: CMakeLists.txt  SCServiceSoapBinding.nsmap  soapC.c  soapClient.c  soapH.h  soapServer.c  soapStub.h
src/: DebugPrint.c  bIf_protocol.c  bIf_protocol.h  ipc_client.c  monitor.c  public.h  slavePoll.c  soap_comm.c  soap_comm.h  sqTable_init.c  sqlite_api.c  sqlite_api.h  uartDrvFun.c
web_src/: CMakeLists.txt  fsu_web.c
